# sentiment-analysis

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  REQUIREMENTS_TRACEABILITY.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: benchmark.json  data_audit.json  embedding_experiment_decision.json  embedding_experiment_results.csv  error_analysis.csv  experiment_comparison.csv  final_metrics.json  imbalance_heldout_comparison.json  imbalance_heldout_lock.json  imbalance_oof_decision.json  imbalance_oof_results.csv  jina_embedding_experiment_decision.json  jina_embedding_experiment_results.csv  language_filter_summary.csv  language_summary.csv  linear_model_experiment.csv  llm_metadata.json  llm_metrics.json  llm_predictions.csv  model.joblib  model_comparison.csv  model_comparison_validation.json  model_metadata.json  model_release.json  split_metadata.json
artifacts/final_five/: comparison.csv  comparison.json  heldout_predictions.csv
artifacts/final_models/: comparison.csv  comparison.json  heldout_predictions.csv  jina_frozen_heads.joblib
artifacts/jina_ordinal_logistic/: jina_ordinal_logistic_experiment.csv  jina_ordinal_logistic_experiment.json
artifacts/ordinal/: ordinal_experiment.csv  ordinal_experiment.json
artifacts/ordinal_logistic/: ordinal_logistic_experiment.csv  ordinal_logistic_experiment.json  ordinal_logistic_held_out_evaluation.json
artifacts/robbert_improvement/: checksums.sha256  comparison.json  config.resolved.yaml  oof_predictions.csv  remote_bundle.json  test_predictions.csv  trials_index.jsonl
artifacts/robbert_v2/: checksums.sha256  comparison.json  config.resolved.yaml  mlflow_import.json  test_predictions.csv
configs/: blind_evaluation.yaml  embedding_experiment.yaml  final_five_comparison.yaml  final_model_comparison.yaml  imbalance_experiment.yaml  jina_ordinal_logistic.yaml  linear_experiment.yaml  llm_experiment.yaml  training.yaml
configs/models/: README.md  jina_logreg.yaml  jina_ordinal.yaml  llm_advisor.yaml  robbert_improvement.yaml  robbert_v2.yaml  tfidf_logreg.yaml  tfidf_ordinal.yaml
docs/: ARCHITECTURE.md  BLIND_EVALUATION.md  GIT_MLFLOW_MAPPING.md  MODEL_GOVERNANCE.md  MODEL_REGISTRY.md  REPOSITORY_LAYOUT.md
notebooks/: final_five_colab.ipynb  final_model_comparison_colab.ipynb  jina_embedding_experiment.ipynb  jina_ordinal_logistic_experiment.ipynb  robbert_improvement_colab.ipynb  robbert_v2_finetuning_colab.ipynb
reports/: data_audit.md  embedding_experiment.md  final_five_model_comparison.md  final_model_comparison.md  jina_embedding_experiment.md  jina_embedding_validation.md  jina_ordinal_logistic_experiment.md  linear_model_experiment.md  llm_experiment.md  model_comparison.md  model_report.md  negative_imbalance_experiment.md  robbert_experiments.md  sentiment_final_one_page_report.pptx  sentiment_top5_governance_summary.pptx
scripts/: build_colab_bundle.py  manage_model_release.py  organize_mlflow_registry.py
src/dutch_sentiment/: __init__.py  api.py  audit.py  benchmark.py  blind_evaluation.py  config.py  constants.py  data.py  embedding_experiment.py  embedding_runtime.py  evaluate.py  experiment_data.py  experiment_utils.py  language.py  (+18 more)
tests/: test_api.py  test_audit_metrics_service.py  test_data.py  test_embedding_experiment.py  test_experiment_orchestration.py  test_experiment_shared.py  test_final_comparison.py  test_imbalance_experiment.py  test_jina_ordinal_logistic_experiment.py  test_language.py  test_linear_experiment.py  test_llm_experiment.py  test_llm_recommender.py  test_model.py  test_ordinal.py  test_ordinal_classical.py  test_ordinal_experiment.py  test_ordinal_logistic_experiment.py  test_predict.py  test_release_governance.py  test_reporting_benchmark.py  test_robbert_finetune.py  test_text.py
(+18 files in other folders)
