[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dutch-sentiment"
version = "0.1.0"
description = "Reproducible Dutch movie-review sentiment classification service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "joblib>=1.4,<2",
  "lingua-language-detector>=2.0,<3",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
  "scikit-learn>=1.4,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
train = [
  "mlflow>=2.16,<4",
  "pandas>=2.1,<3",
  "PyYAML>=6,<7",
  "tabulate>=0.9,<1",
]
embeddings = [
  "numpy>=1.26,<2",
  "sentence-transformers>=5,<6",
  "torch==2.2.2; platform_system == 'Darwin' and platform_machine == 'x86_64'",
  "transformers>=4.41,<5",
]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
sentiment-audit = "dutch_sentiment.audit:main"
sentiment-train = "dutch_sentiment.train:main"
sentiment-evaluate = "dutch_sentiment.evaluate:main"
sentiment-benchmark = "dutch_sentiment.benchmark:main"
sentiment-embedding-experiment = "dutch_sentiment.embedding_experiment:main"
sentiment-jina-ordinal-logistic = "dutch_sentiment.jina_ordinal_logistic_experiment:main"
sentiment-predict = "dutch_sentiment.predict:main"
sentiment-serve = "dutch_sentiment.api:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["dutch_sentiment"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
