[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dutch-sentiment"
dynamic = ["version"]
description = "Reproducible Dutch movie-review sentiment classification service"
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "joblib>=1.4,<2",
  "lingua-language-detector>=2.0,<3",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
  "scikit-learn>=1.4,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
train = [
  "httpx>=0.27,<1",
  "mlflow>=2.16,<4",
  "pandas>=2.1,<3",
  "PyYAML>=6,<7",
  "tabulate>=0.9,<1",
]
embeddings = [
  "numpy>=1.26,<2",
  "sentence-transformers>=5,<6",
  "torch==2.2.2; platform_system == 'Darwin' and platform_machine == 'x86_64'",
  "transformers>=4.41,<5",
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
sentiment-audit = "dutch_sentiment.audit:main"
sentiment-train = "dutch_sentiment.train:main"
sentiment-evaluate = "dutch_sentiment.evaluate:main"
sentiment-benchmark = "dutch_sentiment.benchmark:main"
sentiment-embedding-experiment = "dutch_sentiment.experiments.embedding:main"
sentiment-jina-ordinal-logistic = "dutch_sentiment.experiments.jina_ordinal:main"
sentiment-predict = "dutch_sentiment.predict:main"
sentiment-serve = "dutch_sentiment.api:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dutch_sentiment = ["static/*"]

[tool.setuptools.dynamic]
version = {attr = "dutch_sentiment.__version__"}

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["dutch_sentiment"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
